[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "short-term-trading-engine"
version = "0.0.1"
description = "Multi-engine quantitative trading platform with shared core (tpcore), platform schema, and pluggable engines."
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "STE Team" }]

dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "asyncpg>=0.29",
    "psycopg[binary,pool]>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "exchange_calendars>=4.5",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "alpaca-py>=0.30",
    "PyYAML>=6.0",
    "scipy>=1.11",
    "statsmodels>=0.14,<1",
    "croniter>=2.0",
    "xlrd>=2.0",
    "anthropic>=0.100,<1",
    # S3-compatible object-storage client for the R3 substrate migration
    # (env-pluggable archive backend). Lazy-imported inside
    # ``tpcore.ingestion.csv_archive_backends.S3Backend`` so the local-
    # default code path pays zero import cost. Chosen over boto3 for
    # transitive-dep weight: minio is a single package with no
    # botocore/awscli/jmespath/s3transfer tail, and natively accepts an
    # ``endpoint=`` arg — works against ANY S3-compatible service
    # (Railway native object store, R2, Supabase Storage, MinIO, S3
    # proper), which is exactly the R3 design's "S3-compatible bucket
    # attached to the service".
    "minio>=7.2,<8",
    # spaCy NLP — used by tpcore.sec.corp_events_extractor for ORG-entity
    # extraction from SEC 8-K filings (acquirer name). The en_core_web_sm
    # pretrained model (~13 MB) is downloaded separately via
    # `python -m spacy download en_core_web_sm` and must be present in any
    # environment that calls _extract_acquirer_ner. Import is lazy so the
    # default import cost is zero for callers that don't touch the NER path.
    "spacy>=3.7,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.6,<4",
    "ruff>=0.4",
    "mypy>=1.10",
    "vulture>=2.11,<3",
]
dashboard = [
    # Operator dashboard — see docs/superpowers/specs/2026-05-13-operator-dashboard.md.
    # Streamlit pinned <1.50 because the chart-library wrapper
    # (streamlit-lightweight-charts-pro, used in Phase 3 of the dashboard)
    # is at 0.x and minor-bump compatibility isn't proven.
    "streamlit>=1.30,<1.50",
    "streamlit-lightweight-charts-pro>=0.3.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.scripts]
ste-check-imports = "tpcore.scripts.check_imports:main"

[tool.setuptools.packages.find]
# NOTE: ``platform/`` is intentionally NOT a Python package — that name shadows
# the stdlib ``platform`` module (used transitively by pandas/exchange_calendars).
# It contains only Alembic migration files which are loaded by path, not import.
include = [
    "tpcore*",  # sigma archived 2026-05-16
# >>> engine-manifest:pyproject-include (generated by scripts/gen_engine_manifest.py — edit the SoT, not this) >>>
    "reversion*",
    "vector*",
    "momentum*",
    "sentinel*",
    "canary*",
    "catalyst*",
# <<< engine-manifest:pyproject-include <<<
]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Validation suite ships hand-curated YAML fixtures alongside the code.
"tpcore.quality.validation" = ["fixtures/*.yaml"]

[tool.ruff]
line-length = 110
target-version = "py311"
# Shared 3-way exclude triplet — keep this coherent with the
# [tool.pytest.ini_options] norecursedirs below and the tracked `.ignore`
# file. The three deliberately near-duplicate; their divergences are
# intentional (see `.ignore`). FIX-2 shell-kwarg cross-ref precedent.
#
# `respect-gitignore = false`: root `data/` is NOT gitignored — the
# original silent drop of the first-party package tpcore/data/ came from
# TWO any-depth matchers, not .gitignore: (1) the unanchored `"data"` that
# was in `extend-exclude`, and (2) the tracked `.ignore` (P2.2), which ruff
# honours via ignore-file discovery (ripgrep semantics) so its `data/` also
# matched at ANY depth. Disabling ignore-file discovery removes (2); the
# `./`-anchored patterns below fix (1) — these explicit patterns are now
# the single authoritative source.
# `./x` = root-relative (a pattern containing a slash is "relative to the
# project root" per ruff docs; verified empirically on ruff 0.15.12 that
# leading-"/" does NOT root-anchor but "./x" / "x/" do) — the 1.4 GB root
# data/ + root logs/ + root .claude/ ONLY, NOT tpcore/data/. "*_archive"
# stays unanchored: a suffix glob for the data/*_archive/ dirs at any depth
# (verified: no first-party package matches *_archive).
respect-gitignore = false
# ``vulture_allowlist.py`` at the repo root is a vulture-hint file, not
# executable Python — vulture parses it as AST patterns to silence
# false-positive dead-code reports (see
# https://github.com/jendrikseipp/vulture#whitelists). Linting it with
# ruff yields ~967 spurious diagnostics (undefined names, unused
# expressions). The canonical ruff-documented way to keep such a file
# in the tree without false-positive noise is ``extend-exclude``
# (https://docs.astral.sh/ruff/settings/#extend-exclude). This is
# strictly stronger than the implicit "CI invokes ruff against
# specific dirs only" pattern — a future contributor running
# ``ruff check .`` locally now matches CI's behaviour, and a new
# top-level ``foo.py`` is NOT silently unlinted.
extend-exclude = ["./data", "./logs", "*_archive", "./.claude", "./vulture_allowlist.py"]

[tool.ruff.lint]
# DTZ (flake8-datetimez) mechanizes the prose-only CLAUDE.md "all
# timestamps UTC" mandate — a naive datetime on a live trade/risk/data
# path is a #245-class real bug. Pre-existing violations were baselined
# once via `ruff check --select DTZ --add-noqa .` (genuinely-benign /
# non-money paths only — every live-money-path noqa was spot-audited);
# from here ALL NEW code must be tz-aware (no new naive datetimes).
# SLF (flake8-self / SLF001) mechanizes the prose-only CLAUDE.md /
# STYLE_GUIDE rule "Never access private attributes (._store/._pool
# etc.) on tpcore classes — use a public accessor; if none exists,
# extend the tpcore class — do NOT add a # noqa: SLF001". Pre-existing
# violations were baselined ONCE via `ruff check --select SLF
# --add-noqa .` (test/fixture/non-tpcore-private sites). From here NEW
# code that needs a tpcore internal MUST add a public accessor — NOT a
# new SLF001 noqa (a new noqa on production tpcore-private access is a
# direct CLAUDE.md violation, not a baseline). See STYLE_GUIDE.md
# "Private-attribute access on tpcore classes".
select = ["E", "F", "I", "B", "UP", "DTZ", "SLF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# `l` for "low" is a natural OHLC variable name in test fixtures; the rule
# (E741: ambiguous variable name) targets production code where one-letter
# names hurt readability, not synthetic-bar generators.
"**/tests/**" = ["E741", "E702"]
# The SP2 characterization oracle is a MAKE-OR-BREAK BYTE-FROZEN
# regression asset: `tpcore/tests/test_lab_dsr_delivered.py::
# test_sp_a2_t_oracle_byte_unmodified_and_green` asserts it is
# byte-identical to origin/main. The SLF001 hits there are non-tpcore
# private access (`sp._norm_inv`, a local search-params module helper
# — benign), but the file CANNOT carry an inline `# noqa: SLF001`
# baseline without violating its byte-frozen §5 invariant. Ignore SLF
# for this one frozen oracle instead (the only correct baseline form
# for a deliberately-immutable asset).
"scripts/tests/test_search_parameters_characterization.py" = ["SLF"]
# Lean P5.4a live-money characterization test: proving the momentum delegate
# is byte-equivalent REQUIRES calling its private
# `_cancel_stale_momentum_orders` (the parity oracle — that IS the test's
# purpose). Engine-private (NOT tpcore-private) access in a char-test; the
# scoped per-file ignore is the correct form (mirrors the frozen-oracle
# precedent above) — never an inline `# noqa: SLF001`.
"tpcore/tests/test_stale_order_cancel.py" = ["SLF"]
# P4 trust-audit sentinel (2026-05-25): a regression-guard against
# accidentally removing the provenance-downgrade WHERE clause from
# ``_upsert_bars``. The test reads ``inspect.getsource(_upsert_bars)``
# (legitimate private-name access — there IS no public surface; the
# function is module-internal by intent). Scoped per-file ignore is
# the canonical form per ``.claude/rules/tests-and-ci.md``.
"tpcore/tests/test_upsert_bars_provenance_guard.py" = ["SLF"]
# P0 foundation (2026-05-30) — three test files that legitimately
# reach into module-private surface to verify foundation invariants:
#   * test_sec_ticker_cik_map.py — injects a fake map into
#     ``SECTickerCIKMap._map`` so the resolution tests are hermetic
#     (no network, no SEC_EDGAR_USER_AGENT required).
#   * test_backfill_sec_metadata_stage.py — names ``ops._STAGE_SPECS``
#     directly to confirm stage registration without invoking the CLI.
#   * test_p0_no_validator_semantics_change.py — pins the byte-frozen
#     ``_FILING_DATES_SQL`` constant on the validator (the operator
#     hard rule "no validator semantics change in this patch" needs a
#     sentinel, and the SQL is module-internal by intent).
# Scoped per-file ignores are the canonical form per
# ``.claude/rules/tests-and-ci.md`` — never inline ``# noqa: SLF001``.
"tests/test_sec_ticker_cik_map.py" = ["SLF"]
"tests/test_backfill_sec_metadata_stage.py" = ["SLF"]
"tests/test_p0_no_validator_semantics_change.py" = ["SLF"]
# 2026-06-02 FPFD extractor pagination tests need to inject a fake
# httpx client (``sec._client = fake_client``) to assert pagination
# behaviour hermetically without real SEC HTTP. Same precedent as the
# CIK / backfill / lifecycle test allowlist entries above.
"tests/test_sec_submissions_extract.py" = ["SLF"]
# 2026-06-02 bulk-zip reader tests reach into ``_local_dir`` / ``_zip_path``
# on ``SECSubmissionsBulkReader`` to assert provider-priority semantics
# (local-first, zip-fallback) hermetically. Same precedent.
"tests/test_sec_submissions_bulk_reader.py" = ["SLF"]
# 2026-06-02 ticker-reuse cleanup stage tests name ``ops._STAGE_SPECS``
# and the module-private ``_FQ_MIRROR_COLUMNS`` / ``_QUARANTINE_DISPOSITIONS``
# / ``_ticker_reuse_manifest_columns`` / ``_quarantine_row`` to pin
# stage registration + the schema contract. Same precedent.
"tests/test_ticker_reuse_cleanup_stage.py" = ["SLF"]
# 2026-06-02 symbol-history evidence backfill stage tests name
# ``ops._STAGE_SPECS`` to pin stage registration + monkeypatch the
# module-private ``_fmp_symbol_change_download`` / ``_build_sec_ticker_cik_crosswalk``
# helpers to keep the run hermetic (no real FMP HTTP, no real SEC zip).
# Same precedent as the cleanup-stage entry above.
"tests/test_symbol_history_evidence_backfill_stage.py" = ["SLF"]
# sec_fundamentals_fallback dry_run knob (2026-06-03):
#   * test_sec_fundamentals_fallback_dry_run.py — Test 7 pins the
#     validator's module-private ``_FILING_DATES_SQL`` sha256 as a
#     "no validator-semantics change" guard for the dry_run patch.
#     Same precedent as the P0 sentinel above.
"tests/test_sec_fundamentals_fallback_dry_run.py" = ["SLF"]
# P2a SEC lifecycle-events extractor tests (2026-05-30):
#   * test_p2_sec_lifecycle_events.py names ``_extract_lifecycle_events``
#     and ``_build_sec_filing_url`` module-private helpers + accesses
#     ``ops._STAGE_SPECS`` / ``ops._LIFECYCLE_SOURCE_PRECEDENCE`` for
#     the precedence-dict + stage-registration sentinels. Same
#     precedent as the P0 test ignores above.
"tests/test_p2_sec_lifecycle_events.py" = ["SLF"]
# F0 parity-gate-cutover (2026-06-01) — tests legitimately reach into
# module-private surface to verify foundation invariants:
#   * test_evaluate_provider_parity_stage.py — names ops._STAGE_SPECS
#     to confirm stage registration without invoking the CLI.
#   * test_parity_primitive_byte_frozen.py — pins the byte-frozen
#     ``_tol`` private helper on the parity primitive (F0's hard rule:
#     don't touch the primitive).
"tests/test_evaluate_provider_parity_stage.py" = ["SLF"]
"tests/test_parity_primitive_byte_frozen.py" = ["SLF"]
# F1 failed-alpha ledger (2026-06-01) — backfill test names the
# module-private ``_build_backfill_records`` helper to verify the
# 5 hand-coded EDGE_VALIDATION_PLAN.md records match the doc; the
# alpha_ledger constructor test names ``_summary_nonempty`` and
# the migration sentinel reads ``ast``-parsed module-private SQL.
"tests/test_failed_alpha_ledger.py" = ["SLF"]
"tests/test_failed_alpha_ledger_migration.py" = ["SLF"]
# SP-B T4 dispatch-seam characterization test: pinning that the lazy
# PARAM_RANGES + `_lab_target_for` resolver + the `_runner_for`/
# `_context_loader_for`/`_context_runner_for` thin views preserve the
# spec §6/§8 private seam names REQUIRES naming those `ops.lab.run`-
# private symbols (that IS the test's purpose — the oracle's by-name
# monkeypatch binds them). Engine-lane-module-private (NOT tpcore-
# private) access in a char-test; the scoped per-file ignore is the
# correct form (mirrors the two frozen/char-oracle precedents above) —
# never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_dispatch_indirection.py" = ["SLF"]
# SP-B T5 CLI-choices-from-roster test: proving both argparse surfaces
# generate `--engine`/`--target-engine` choices from
# `lab_targetable_engines()` REQUIRES calling the `ops.lab.run` /
# `ops.lab.__main__`-private `_parse_args` (that IS the test's purpose —
# it exercises the built parser). Engine-lane-module-private (NOT tpcore-
# private) access in a CLI-contract test; the scoped per-file ignore is
# the correct form (mirrors the char/dispatch-seam precedents above) —
# never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_cli_choices_from_roster.py" = ["SLF"]
# SP-B T6 roster-Lab consistency clockwork: the runtime-equality
# clockwork + synthetic-drift red-proof + SP-A non-regression REQUIRES
# naming the `ops.lab.run` / `ops.lab.__main__`-private `_parse_args` /
# `_lab_target_for` / `_run_lab_core` / `compute_dsr_for_verdict` and the
# `tpcore.engine_profile`-private `_PROFILE` (that IS the test's purpose
# — it exercises the built parsers, the resolver seam, and the ledger
# spine, and injects a synthetic _PROFILE entry to prove the clockwork
# reds on drift). Engine-lane-module-private (NOT tpcore-private) access
# in a consistency-clockwork test; the scoped per-file ignore is the
# correct form (mirrors the char/dispatch/CLI-choices precedents above)
# — never an inline `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE). Task-6
# in the plan had no pyproject step; this entry was added as a
# controller-adjudicated Plan correction (the SLF-baseline plan-defect
# class, T5 Step-4b precedent).
"tpcore/tests/test_lab_targeting_consistency.py" = ["SLF"]
# SP-D §5.1 char-before-refactor anchor: pinning the CURRENT Sharpe
# ranking REQUIRES naming the `ops.lab.run`-private `_score_for_ranking`
# (that IS the test's purpose — it freezes the private scorer's closed
# form). Engine-lane-module-private (NOT tpcore-private) access in a
# char-oracle; the scoped per-file ignore is the correct form (mirrors
# the SP-B char/dispatch precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_lab_sp_d_char_anchor.py" = ["SLF"]
# SP-D §5.2 make-or-break + §5.5 units: proving gate-invariance + the
# pre-SP-D-sidecar regression REQUIRES naming `ops.lab.run`-private
# symbols (`_run_lab_core`, `_build_lab_result`, `_RANKING_METRICS`,
# `_lab_target_for`, `_score_for_ranking`, `rank_candidates`,
# `compute_slice_metrics_from_trades`, `period_returns_from_trades`,
# `compute_dsr_for_verdict`) — that IS the tests' purpose. Engine-lane-
# module-private (NOT tpcore-private) access; the scoped per-file ignore
# is the correct form (SP-B precedent) — never an inline `# noqa: SLF001`.
"tpcore/tests/test_lab_sp_d_make_or_break.py" = ["SLF"]
"tpcore/tests/test_lab_sp_d_units.py" = ["SLF"]
# SP-E Sentinel proof case: proving Sentinel's declared non-Sharpe
# MAXDD_REDUCTION ranks correctly while the sacred gate is byte-identical
# REQUIRES naming `ops.lab.run`-private symbols (`_lab_target_for`,
# `_resolve_ranking_metric`, `_score_for_ranking`, `rank_candidates`,
# `TrialResult`, `compute_slice_metrics_from_trades`) — that IS the
# test's purpose (it instantiates the SP-D make-or-break on Sentinel's
# exact bar through the real SP-B roster resolver). Engine-lane-module-
# private (NOT tpcore-private) access; the scoped per-file ignore is the
# correct form (SP-B/SP-D precedent) — never an inline `# noqa: SLF001`
# (CLAUDE.md / STYLE_GUIDE).
"sentinel/tests/test_lab_maxdd_ranking_gate_sacred.py" = ["SLF"]
# SP-F Catalyst proof case (lab_candidate_readiness §2/§3 C4): the
# byte-identical / no-cross-trial-leakage characterization test
# REQUIRES naming the `catalyst.backtest`-private
# `_CLUSTER_WINDOW_OVERRIDE` to prove the per-call module-global reset
# discipline (the SP-D/SP-E precedent for engine-OWNED Lab seams).
# Engine-lane-module-private (NOT tpcore-private) access in a
# characterization test; the scoped per-file ignore is the correct form
# (mirrors the SP-B/SP-D/SP-E precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"catalyst/tests/test_catalyst_backtest.py" = ["SLF"]
"catalyst/tests/test_lab_cluster_window_byte_identical.py" = ["SLF"]
# Engine-surface-enrichment (2026-05-22): the beat_30d_only PEAD arm +
# hold_days Lab knob. The per-call module-global reset test names
# `_HOLD_DAYS_OVERRIDE` and `_EVENT_CONFIRMATION_MODE_OVERRIDE` from
# `catalyst.backtest` to prove the per-call discipline; the
# engine-lane-module-private access is the same SP-B/SP-D/SP-E/SP-F
# precedent (the scoped per-file ignore, never inline `# noqa`).
"catalyst/tests/test_lab_pead_and_hold_days.py" = ["SLF"]
# Engine-surface-enrichment (2026-05-22, PR #302): the
# beat_30d_only_macro_expansion arm. The per-call module-global reset
# test names `_HOLD_DAYS_OVERRIDE` and `_EVENT_CONFIRMATION_MODE_OVERRIDE`
# from `catalyst.backtest` to prove the per-call discipline; same
# SP-B/SP-D/SP-E/SP-F precedent as test_lab_pead_and_hold_days.py
# directly above (scoped per-file ignore, never inline `# noqa`). The
# omission of this entry in PR #302 broke main-branch CI; this entry
# closes the gate.
"catalyst/tests/test_lab_macro_expansion_byte_identical.py" = ["SLF"]
# Reversion partial-axis regime-filter Lab enrichment (2026-05-22). The
# per-call module-global reset test names `_REGIME_FILTER_OVERRIDE` +
# `_REGIME_TARGET_OVERRIDE`, and the mask-builder smoke test calls the
# `_build_session_regime_mask` private helper to confirm the gate-off
# short-circuit returns None. Engine-lane-module-private access (NOT
# tpcore-private) — the same SP-B/SP-D/SP-E/SP-F precedent for engine-
# OWNED Lab seams; the scoped per-file ignore is the correct form (never
# inline `# noqa: SLF001`).
"reversion/tests/test_regime_filter.py" = ["SLF"]
# vector_composite Lab candidate (spec
# docs/superpowers/specs/2026-05-20-vector-composite-lab-candidate.md
# §3.3): the byte-identical / no-cross-trial-leakage C1-C4
# characterization test REQUIRES naming the ``vector.backtest``-private
# `_COMPOSITE_MODE_OVERRIDE` to prove the per-call module-global reset
# discipline (H-VC-8 — the same SP-D/SP-E/SP-F precedent for engine-
# OWNED Lab seams). Engine-lane-module-private (NOT tpcore-private)
# access; the scoped per-file ignore is the correct form (mirrors the
# SP-B/SP-D/SP-E/SP-F precedents above) — never an inline
# `# noqa: SLF001` (CLAUDE.md / STYLE_GUIDE).
"vector/tests/test_composite_flag_byte_identical.py" = ["SLF"]
# Orphan-script zero-allowlist migration tests (2026-05-21). Each
# stage test asserts the new ``ops.py``-private ``_stage_<name>``
# coroutine is registered in ``_STAGE_SPECS`` + ``KNOWN_STAGES`` and
# smoke-tests its body via a FakePool/FakeConn double — that IS the
# tests' purpose (mirror of the just-shipped
# ``test_compute_fundamental_ratios_stage.py`` precedent). Engine-
# lane-module-private (NOT tpcore-private) access in registration-pin
# + body-smoke tests; the scoped per-file ignore is the correct form
# (mirrors every other SP-B/SP-D/SP-E/SP-F char-test precedent above)
# — never an inline ``# noqa: SLF001`` (CLAUDE.md / STYLE_GUIDE).
"tpcore/tests/test_compute_fundamental_ratios_stage.py" = ["SLF"]
"tpcore/tests/test_compare_baselines_stage.py" = ["SLF"]
"tpcore/tests/test_aar_pipeline_smoke_stage.py" = ["SLF"]
"tpcore/tests/test_kill_switch_smoke_stage.py" = ["SLF"]
"tpcore/tests/test_extract_tradier_full_stage.py" = ["SLF"]
"tpcore/tests/test_ingest_tradier_csv_stage.py" = ["SLF"]
# Lab final-holdout chunking test (statement_timeout fix, 2026-05-21).
# Proving the chunked replay partitions the holdout disjointly + does
# NOT multiply the SP-A ledger spend REQUIRES naming the
# ``ops.lab.run``-private ``chunk_final_holdout``,
# ``_run_final_holdout_chunked`` and ``_run_lab_core`` (that IS the
# test's purpose — the transport invariant lives at that seam).
# Engine-lane-module-private (NOT tpcore-private) access; the scoped
# per-file ignore is the correct form (mirrors the SP-B/SP-D/SP-E/SP-F
# precedents above) — never an inline ``# noqa: SLF001``.
"tpcore/tests/test_lab_final_holdout_chunking.py" = ["SLF"]
# daily_bars coverage_collapse → repair_gaps auto-cascade regression
# (operator-reproduced 2026-05-18 → 2026-05-20). Proving the cascade
# fires on coverage_collapse but NOT on other FAILED modes REQUIRES
# naming ``scripts/ops.py``-private symbols (``_stage_daily_bars``,
# ``_load_daily_bars_config``, ``_market_open_block_reason``,
# ``_per_feed_tripwire``, ``_self_heal_failed_stages``,
# ``_STAGE_SPECS``, ``_DAILY_BARS_COVERAGE_COLLAPSE_TOKEN``) — that
# IS the test's purpose (it monkeypatches the live pipeline down to a
# single-stage harness so the cascade decision can be observed). Engine-
# lane-module-private (NOT tpcore-private) access; the scoped per-file
# ignore is the correct form (mirrors every other SP-B/SP-D/SP-E/SP-F
# char-test precedent above) — never an inline ``# noqa: SLF001``.
"tests/test_daily_bars_coverage_collapse_auto_cascade.py" = ["SLF"]
# Autonomous data-lane recovery (2026-05-21 flip per operator directive
# "automate the god damn triage, no operator-task bullshit in the
# self heal"). Proving the whitelist scope + the daemon's wiring
# REQUIRES naming the ``ops.llm_data_recovery``-private
# ``_AUTONOMOUS_DATA_ACTIONS`` — that IS the test's purpose (the
# whitelist is the action surface; without an assertion that
# engine/roster paths are excluded the autonomy claim has no bite).
# Engine-lane-module-private (NOT tpcore-private) access; the scoped
# per-file ignore is the correct form (mirrors every SP-B/SP-D/SP-E/SP-F
# char-test precedent above) — never an inline ``# noqa: SLF001``.
"tests/test_llm_triage_autonomous_data_recovery.py" = ["SLF"]
# daily_bars force_refresh chunking regression (2026-05-21 — the
# 3600s timeout fix). The test pins the chunker's partition + the
# stage-level dispatch by NAMING ``scripts/ops.py``-private symbols
# (``_resolve_force_refresh_universe``, ``_force_refresh_chunked``,
# ``_stage_daily_bars``) — that IS the test's purpose (a transport-
# layer fix's invariant lives at exactly those seams). Engine-lane-
# module-private (NOT tpcore-private) access; the scoped per-file
# ignore is the correct form (mirrors the auto-cascade precedent
# immediately above) — never an inline ``# noqa: SLF001``.
"tests/test_daily_bars_force_refresh_chunked.py" = ["SLF"]
# Consolidated lane-service daemon (2026-05-21 Railway 2-daemon
# budget). The test pins the supervisor's crash-isolation contract +
# the factory-delegation invariant by NAMING ``ops.lane_service``-
# private symbols (``_run_supervised``, ``_data_repair_main_loop``,
# ``_triage_data_main_loop``, ``_triage_engine_loop``,
# ``_triage_lab_emitter_loop``) — that IS the test's purpose (the
# consolidation's contract is "delegate to source modules without
# behavioural rewrite", witnessed via callable identity). Engine-
# lane-module-private (NOT tpcore-private) access; the scoped per-
# file ignore is the correct form (mirrors every SP-B/SP-D/SP-E/SP-F
# char-test precedent above) — never an inline ``# noqa: SLF001``.
"tests/test_lane_service.py" = ["SLF"]
# Wave-1 deterministic self-heal validation cascade (D6..D10 — spec
# docs/superpowers/specs/2026-05-21-deterministic-self-heal-coverage-
# expansion-design.md). The test pins the cascade dispatch + the
# parse-helper + the dedupe-stage shape by NAMING ``scripts/ops.py``-
# private symbols (``_stage_data_validation``, ``_parse_failed_check_names``,
# ``_stage_dedupe_monotone``, ``_OFF_CYCLE_STAGES``,
# ``_load_daily_bars_config``, ``_market_open_block_reason``,
# ``_per_feed_tripwire``, ``_self_heal_failed_stages``,
# ``_auto_cascade_coverage_collapse``, ``_STAGE_SPECS``) — that IS
# the test's purpose (it monkeypatches the live pipeline down to a
# minimal data_validation + cascade-target harness so the dispatch
# decision can be observed per row). Engine-lane-module-private (NOT
# tpcore-private) access; the scoped per-file ignore is the correct
# form (mirrors the daily_bars coverage_collapse cascade precedent
# immediately above) — never an inline ``# noqa: SLF001``.
"tests/test_validation_failures_auto_cascade_wave1.py" = ["SLF"]
# FinalLaneVerdict control plane regression (2026-05-29 long-term fix).
# Same ops-shadow + private-helper access pattern as the Wave-1
# cascade test immediately above. The scoped per-file ignore is the
# correct form — never an inline ``# noqa: SLF001``.
"tests/test_final_lane_verdict.py" = ["SLF"]
# console-api operator-trigger endpoints (2026-05-29
# build_real_data_pipeline_operations_console). The bearer-token
# guard ``_require_operator_token`` is intentionally module-private
# (only the operator-action routes call it; no other surface should).
# Tests verify the 503 / 401 / 403 / accept paths directly to pin the
# auth contract — the scoped per-file ignore is the correct form
# (mirrors the precedents above) — never an inline ``# noqa: SLF001``.
"tests/test_console_api_data_pipeline.py" = ["SLF"]
# Wave-2 deterministic self-heal stage-robustness cascade (D2 / D3 /
# D5 / D13 — spec docs/superpowers/specs/2026-05-21-deterministic-self-
# heal-coverage-expansion-design.md §1 rows D2 D3 D5 D13 + §4 ANSWERED).
# The test pins the cascade dispatch per failure shape + the daemon-
# alive invariant for D5 + the local-pool recycle for D13 by NAMING
# ``scripts/ops.py``-private symbols (``_load_daily_bars_config``,
# ``_market_open_block_reason``, ``_per_feed_tripwire``,
# ``_auto_cascade_coverage_collapse``, ``_auto_cascade_validation_failures``,
# ``_self_heal_failed_stages``, ``_STAGE_SPECS``, ``_AUTH_401_TOKENS``,
# ``_matches_any``, ``_extract_failed_url_snippet``,
# ``_infer_provider_from_stage``, ``HEAVY_STAGE_TIMEOUT_SEC``) — that
# IS the test's purpose (it monkeypatches the live pipeline down to a
# single-stage harness per Wave-2 row so the dispatch decision + the
# event shape + the daemon-alive contract can be observed). Engine-
# lane-module-private (NOT tpcore-private) access; the scoped per-file
# ignore is the correct form (mirrors the Wave-1 precedent immediately
# above) — never an inline ``# noqa: SLF001``.
"tests/test_stage_robustness_auto_cascade_wave2.py" = ["SLF"]
# D11 (vendor_late classification) + D14 (data_validation TIMEOUT →
# chunked re-run) deterministic self-heal cascade pins (spec
# docs/superpowers/specs/2026-05-21-deterministic-self-heal-coverage-
# expansion-design.md §1 rows D11 D14). The test pins the cascade
# dispatch + the synthesised FAILED-shape contract + the per-chunk
# timeout safe-degrade + the vendor_late detail wiring by NAMING
# ``scripts/ops.py``-private symbols (``_load_daily_bars_config``,
# ``_market_open_block_reason``, ``_per_feed_tripwire``,
# ``_auto_cascade_coverage_collapse``, ``_auto_cascade_validation_failures``,
# ``_auto_cascade_stage_robustness``, ``_self_heal_failed_stages``,
# ``_chunk_validation_suite``, ``_VENDOR_LATE_CHECK_MAP``,
# ``_VALIDATION_CHUNK_SPECS``, ``_STAGE_SPECS``,
# ``_stage_data_validation``, ``_parse_failed_check_names``) — that IS
# the test's purpose (the cascade decision + the synthesised-FAILED
# contract + the chunk partitioning are exactly at those seams; without
# naming them the D11/D14 contracts have no anchor). Data-lane-module-
# private (NOT tpcore-private) access; the scoped per-file ignore is
# the correct form (mirrors the Wave-1/Wave-2 precedents immediately
# above) — never an inline ``# noqa: SLF001``.
"tests/test_validation_vendor_late_and_chunked_cascade.py" = ["SLF"]
# Wave-3 engine-lane deterministic self-heal cascade pins (2026-05-22 —
# docs/superpowers/specs/2026-05-21-deterministic-self-heal-coverage-
# expansion-design.md rows E1/E2/E3/E9). The test pins the cascade
# dispatch + the ContextVar + the import pre-check + the cascade-map
# default by NAMING ``ops.engine_dispatch``-private symbols
# (``_invoke_scheduler``, ``_invoke_scheduler_with_recovery``,
# ``_pre_check_engine_import``, ``_dispatch_pool``,
# ``_DEFAULT_STAGE_CASCADE``) — that IS the test's purpose (the cascade
# decision happens at exactly those seams; without naming them the
# Wave-3 contract has no anchor). Engine-lane-module-private (NOT
# tpcore-private) access; the scoped per-file ignore is the correct
# form (mirrors the Wave-1 precedent immediately above) — never an
# inline ``# noqa: SLF001``.
"tests/test_engine_lane_self_heal_wave3.py" = ["SLF"]
# Wave-1 full-spectrum data-feed hardening critical-path stage pins
# (2026-05-22 PR fix/feed-audit-wave-1-critical-path-blockers). The
# tests name three ``scripts/ops.py``-private stage symbols
# (``_stage_historical_macro_indicators``,
# ``_stage_rebuild_corporate_actions_from_archive``,
# ``_stage_historical_fundamentals_quarterly``) — that IS the test's
# purpose: pin the new per-blocker stage contracts (params parsing,
# dispatch to underlying primitives, no-silent-skip on missing input)
# at exactly those seams. Data-lane-module-private (NOT tpcore-
# private) access; the scoped per-file ignore is the correct form
# (mirrors the Wave-1/Wave-2/Wave-3 precedents immediately above) —
# never an inline ``# noqa: SLF001``.
"tests/test_stage_historical_macro_indicators.py" = ["SLF"]
"tests/test_rebuild_corporate_actions_from_archive.py" = ["SLF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Part of the 3-way exclude triplet (see [tool.ruff] extend-exclude above and
# the tracked `.ignore`). norecursedirs is basename-fnmatch ONLY (cannot
# root-anchor), so "data"/"logs" would also match the first-party package
# tpcore/data/ — and they were redundant anyway: `testpaths` below already
# scopes collection to explicit dirs, so root data/ + logs/ are never walked.
# Dropped them; only basename-safe non-package entries remain.
norecursedirs = [".claude", "*_archive", ".git", ".venv"]
markers = [
    "xdist_group: pytest-xdist group pinning (ops-shadow single-worker isolation; P1.3)",
    "integration: live-API + live-DB integration tests (skipped in CI when FMP_API_KEY/DATABASE_URL absent)",
]
testpaths = [
    "tests",
    "tpcore/tests",
    "tpcore/forensics/tests",
    "tpcore/outage/tests",
    "tpcore/quality/validation/tests",
    "tpcore/lab/llm_finder/tests",
    "tpcore/lab/llm_aar/tests",
    "tpcore/lab/llm_emitter/tests",
    "ops/tests",
# >>> engine-manifest:pyproject-testpaths (generated by scripts/gen_engine_manifest.py — edit the SoT, not this) >>>
    "reversion/tests",
    "vector/tests",
    "momentum/tests",
    "sentinel/tests",
    "canary/tests",
    "catalyst/tests",
# <<< engine-manifest:pyproject-testpaths <<<
    "scripts/tests",
]
