[project]
name = "ste-console-api"
version = "0.1.0"
description = "Operator-console FastAPI backend — thin read-only JSON over Supabase + Railway state"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "asyncpg>=0.30",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
